trocando funçao console por document.write para exibição

--- a/cifraCesar/criptografia_looping.html
+++ b/cifraCesar/criptografia_looping.html
@@ -28,7 +28,7 @@
                 deslocamentoArr.push(deslocamento);
                 var cifra = String.fromCharCode(deslocamento);
                 cifraArr.push(cifra);
-                console.log(`'${letra}' = '${codigo}' + '${deslocamento}' = '${cifra}'`);
+                document.write(`'${letra}' = '${codigo}' + '${deslocamento}' = '${cifra}<br>'`);
             }
         }
         console.log(cifraCesar(nome, chave));
