--- a/cifraCesar/criptografia_looping.html
+++ b/cifraCesar/criptografia_looping.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        var nome = (prompt("Insira uma mensargem - use somente letras maiúsculas")).toUpperCase(); 
+        var nome = (prompt("Insira uma mensagem - use somente letras maiúsculas")).toUpperCase(); 
         var chave = parseInt(prompt("Insira uma chave numérica para codificar a mensagem"));
 
         function cifraCesar(nome, deslocamento) {
