--- a/desafio_form/index.html
+++ b/desafio_form/index.html
@@ -40,7 +40,7 @@
         </form>
     </main>
     <footer>
-        <p><i class="fa fa-copyright" aria-hidden="true">&#169 Copyrigth by Robertinha</i></p>
+        <p><i class="fa fa-copyright" aria-hidden="true">&#169 Copyrigth by <a target='_blank' href="https://github.com/LaDespistada1981"> Robertinha</a></i></p>
     </footer>
 </body>
 </html>
